# Contextly

./: .contextlyignore  .gitignore  LICENSE  PROJECT_CONTEXT.md  README.md  RELEASE_NOTES.md  SECURITY.md  coverage_tmp.txt  test_finally.py
.contextly/exports/: export_cli_20260611_211043.md
.contextly/memory/: rules.yaml
cli/: CHANGELOG.md  README.md  pyproject.toml
cli/contextly/: __init__.py  __main__.py  main.py
cli/contextly-1.0.3/tests/: test_core.py
cli/contextly/commands/: __init__.py  analyze.py  discover.py  explain.py  export.py  impact.py  init.py  inspect.py  learn.py  memory.py  pack.py  stats.py  summary.py
cli/contextly/core/: __init__.py  diagnostics.py
cli/contextly/core/analyzer/: __init__.py  engine.py
cli/contextly/core/discovery/: __init__.py  engine.py  registry.py
cli/contextly/core/discovery/rules/: base.py  path.py
cli/contextly/core/explainer/: engine.py
cli/contextly/core/exporter/: __init__.py  engine.py
cli/contextly/core/graph/: assembler.py  builder.py  cluster.py  validator.py
cli/contextly/core/graph/parsers/: base.py  python.py  registry.py  typescript.py
cli/contextly/core/impact/: engine.py
cli/contextly/core/initializer/: engine.py
cli/contextly/core/inspector/: __init__.py  engine.py
cli/contextly/core/learner/: engine.py
cli/contextly/core/memory/: engine.py
cli/contextly/core/metrics/: __init__.py  base.py  providers.py
cli/contextly/core/packer/: __init__.py  compression.py  engine.py  formatter.py  ranking.py  relevance.py
cli/contextly/generators/: __init__.py  base.py  chatgpt.py  claude.py  context.py  registry.py
cli/contextly/scanners/: __init__.py  architecture.py  base.py  capabilities.py  dependencies.py  framework.py  language.py  patterns.py  registry.py
cli/contextly/types/: __init__.py  models.py
cli/contextly/utils/: __init__.py  config.py  constants.py  exceptions.py  fs.py  ignore.py  io.py  memory.py  paths.py  validation.py  walker.py
cli/tests/: conftest.py  test_analyze.py  test_cluster.py  test_commands.py  test_compression.py  test_core.py  test_coverage_gap.py  test_coverage_gap2.py  test_coverage_gap_3.py  test_coverage_gap_4.py  test_coverage_gap_5.py  test_coverage_main.py  test_discover.py  test_discover_extended.py  test_explain_cmd.py  test_explainer.py  test_export.py  test_formatter.py  test_fs.py  test_fs_paths.py  test_generators.py  test_graph.py  test_graph_extended.py  test_impact.py  test_impact_export_coverage.py  test_init.py  test_inspect.py  test_io.py  test_learn.py  test_main_coverage.py  test_memory.py  test_pack.py  test_packer_engine_edge_cases.py  test_packer_engine_edge_cases_2.py  test_packer_streaming.py  test_python_parser_exhaustive.py  test_qa_coverage.py  test_qa_coverage_builder.py  test_qa_coverage_memory.py  test_qa_coverage_utils.py  (+20 more)
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
src/: routeTree.gen.ts
(+37 files in other folders)
