[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contextly"
version = "0.1.1"
description = "The ultimate context-engineering workspace CLI for LLMs."
readme = "README.md"
authors = [
    { name = "Contextly Team" }
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.0.0",
    "pathspec>=0.12.0",
    "pyperclip>=1.8.2"
]

[project.scripts]
contextly = "contextly.main:app"
