[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contextly"
version = "1.0.6"
description = "The ultimate context-engineering workspace CLI for LLMs."
readme = "README.md"
authors = [
    { name = "Contextly Team" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.0.0",
    "pathspec>=0.12.0",
    "pyperclip>=1.8.2",
    "tomli>=2.0.1",
    "tiktoken>=0.7.0",
    "tree-sitter<0.22.0",
    "tree-sitter-languages>=1.10.0",
    "charset-normalizer>=3.3.0"
]

[project.urls]
Homepage = "https://github.com/vutikurishanmukha9/Contextly"
Repository = "https://github.com/vutikurishanmukha9/Contextly.git"
Changelog = "https://github.com/vutikurishanmukha9/Contextly/blob/main/cli/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0"
]

[project.scripts]
contextly = "contextly.main:app"
