[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contextly"
version = "1.0.6"
description = "The ultimate context-engineering workspace CLI for LLMs."
readme = "README.md"
authors = [
    { name = "Contextly Team" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0,<1.0.0",
    "rich>=13.7.0,<14.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pathspec>=0.12.0,<1.0.0",
    "pyperclip>=1.8.2,<2.0.0",
    "tomli>=2.0.1,<3.0.0",
    "tiktoken>=0.7.0,<1.0.0",
    # tree-sitter-languages historically lags tree-sitter major version bumps.
    # Keep tree-sitter < 0.22.0 pinned until tree-sitter-languages catches up to avoid breakages.
    "tree-sitter<0.22.0",
    "tree-sitter-languages>=1.10.0,<2.0.0",
    "charset-normalizer>=3.3.0,<4.0.0",
    "filelock>=3.13.0,<4.0.0",
    "pebble>=5.0.0,<6.0.0"
]

[project.urls]
Homepage = "https://github.com/vutikurishanmukha9/Contextly"
Repository = "https://github.com/vutikurishanmukha9/Contextly.git"
Changelog = "https://github.com/vutikurishanmukha9/Contextly/blob/main/cli/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0"
]

[project.scripts]
contextly = "contextly.main:app"
